<resources>

    <string name="deletando">deletando</string>
    <string name="loginFailure">Não foi possivel efetuar login, tente novamente</string>
    <string name="ip">10.246.241.95</string>
    <string name="inserindo">inserindo...</string>
    <string name="realizada">realizada com sucesso</string>
    <string name="error">erro</string>
    <string name="app_name">BCC Survivor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificações</string>
    <string name="modo_jogo">Modo Jogo</string>
    <string name="ranking">Classificações</string>
    <string name="banco_de_quest_es">Banco de Questões</string>
    <string name="concluir">concluir</string>
    <string name="disciplina">Disciplina</string>
    <string name="assunto">Assunto</string>
    <string name="pergunta_obrigat_rio">Pergunta</string>
    <string name="resposta">Resposta</string>
    <string name="criar">criar</string>
    <string name="pergunta">Pergunta</string>
    <string name="gostou_da_pergunta">Gostou da pergunta?</string>
    <string name="sim">sim</string>
    <string name="nao">não</string>
    <string name="gostou_da_resposta">Gostou da resposta?</string>
    <string name="baixando">baixando</string>
    <string name="aguarde">aguarde</string>
    <string name="descricao">baner</string>
    <string name="LNome">Nome</string>
    <string name="LSenha">Senha</string>
    <string name="btLogin">Entrar</string>
    <string name="tv_Materia">Algoritmos</string>
    <string name="tv_estrelas">1</string>
    <string name="tv_vida">3</string>
    <string name="tv_score">Pontuação: </string>
    <string name="tv_Perguntas"> Questão aqui</string>
    <string name="bt_repostaA">Alternativa A</string>
    <string name="bt_repostaB">Alternativa B</string>
    <string name="bt_repostaC">Alternativa C</string>
    <string name="bt_repostaD">Alternativa D</string>
    <string name="bt_repostaE">Alternativa E</string>
    <string name="tv_Ranking">Classificação</string>
    <string name="tv_Jogador">Jogador</string>
    <string name="tv_Pontos">Pontuação</string>
    <string name="tv_BCC">BCC</string>
    <string name="tv_Survivor">Survivor</string>

    //fases

    <string name="fase1">Introdução</string>
    <string name="fase2">Programação I</string>
    <string name="fase3">Programação II</string>
    <string name="fase4">Circuitos</string>
    <string name="fase5">Inteligencia Artificial</string>
    <string name="fase6">Desenvolvimento móvel</string>



    //disciplinas

    <string name="calculo_ni">CÁLCULO NI</string>
    <string name="calculo_nii">CÁLCULO NII</string>
    <string name="introducao_computacao">INTRODUÇÃO A CIÊNCIA DA COMPUTAÇÃO</string>
    <string name="intro_prog_i">INTRODUÇÃO À PROGRAMAÇÃO I</string>
    <string name="mat_dis_i">MATEMÁTICA DISCRETA I</string>
    <string name="estrutura_dados">ALGORITMOS E ESTRUTURAS DE DADOS</string>
    <string name="algebra_linear">ÁLGEBRA VETORIAL E LINEAR PARA COMPUTAÇÃO</string>
    <string name="intro_prog">INTRODUÇÃO À PROGRAMAÇÃO II</string>
    <string name="mat_dis_ii">MATEMÁTICA DISCRETA II</string>
    <string name="met_cient">METODOLOGIA CIENTÍFICA APLICADA À COMPUTAÇÃO</string>
    <string name="cir_dig">CIRCUITOS DIGITAIS</string>
    <string name="est_expl">ESTATÍSTICA EXPLORATÓRIA I</string>
    <string name="fis_apl">FÍSICA APLICADA À COMPUTAÇÃO</string>
    <string name="proj_analise">PROJETO E ANÁLISE DE ALGORITMOS</string>
    <string name="teori_comp">TEORIA DA COMPUTAÇÃO</string>
    <string name="arqui_org">ARQUITETURA E ORGANIZAÇÃO DE COMPUTADORES</string>
    <string name="banco_dados">BANCO DE DADOS S</string>
    <string name="enge_soft">ENGENHARIA DE SOFTWARE</string>
    <string name="para_prog">PARADIGMAS DE PROGRAMAÇÃO</string>
    <string name="rede_comp">REDES DE COMPUTADORES</string>
    <string name="compiladores">COMPILADORES</string>
    <string name="int_art">INTELIGÊNCIA ARTIFICIAL</string>
    <string name="proj_desen">PROJETO DE DESENVOLVIMENTO DE SOFTWARE</string>
    <string name="sis_distr">SISTEMAS DISTRIBUÍDOS</string>
    <string name="sist_oper">SISTEMAS OPERACIONAIS</string>
    <string name="pular">Pular essa questão</string>
    <string name="starGame">Modo jogo</string>
    <string name="Continue">Continue</string>
    <string name="new_game">Novo Jogo</string>
    <string name="cadastro">Cadastro</string>
    <string name="hintCadastroLogin">Escolha um login</string>
    <string name="hintCadastroSenha">Escolha uma senha</string>
    <string name="hintConfirmSenha">Confirme a senha</string>
    <string name="hintCadastroNick">Escolha um nickname</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sugerirCadastro">Não possui cadastro ainda?</string>
    <string name="hintCadastroEmail">Informe seu email</string>
    <string name="camposIncompletos">Preencha todos os campos</string>
    <string name="falhaCadastroSenha">A senha e confirmação devem ser iguais</string>
    <string name="sucessoCadastro">Cadastro efetuado com sucesso, efetue login</string>
    <string name="falhaCadastro">Ocorreu uma falha no cadastro, tente novamente</string>
    <string name="playAgain">Jogar Novamente</string>
    <string name="recorde">Recorde de pontuação</string>
    <string name="pontucao_atual">Pontuação atual</string>
    <string name="sem_pulos">Não possui pulos restantes</string>
    <string name="cant_jump">Não pode pular na ultima fase</string>


</resources>
