<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:fontFamily="@font/adobe"
            android:text="@string/tv_BCC"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/morphable"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:fontFamily="@font/adobe"
            android:layout_height="wrap_content"
            android:text="@string/tv_Survivor"
            android:textAlignment="center"
            android:textColor="@color/morphable"
            android:textSize="70sp" />

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/LNome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/LSenha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btlsenha"
            android:backgroundTint="@color/questionBackgroud"
            android:text="@string/btLogin"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="60dp"
            android:gravity="center_vertical"
            android:text="@string/sugerirCadastro"/>
        <Button
            android:id="@+id/btn_entrarCadastro"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/cadastrar"
            android:background="@drawable/btn_blue_effect"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>