<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/disciplina"/>
        <TextView
            android:id="@+id/textDisciplina"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/assunto"/>
        <EditText
            android:id="@+id/editAssunto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/pergunta_obrigat_rio"/>
        <TextView
            android:id="@+id/pergunta"
            android:layout_width="match_parent"
            android:background="@color/colorYellow"
            android:paddingLeft="16dp"
            android:layout_height="100dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/resposta"/>
        <TextView
            android:id="@+id/resposta"
            android:layout_width="match_parent"
            android:background="@color/colorYellow"
            android:paddingLeft="16dp"
            android:layout_height="100dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/criar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>