<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ufrpe.bccsurvivor.jogo.StartGameActivity"
    android:background="@color/colorGame">

    <TextView
        android:id="@+id/tv_startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/starGame"
        android:textSize="45dp"
        android:textAlignment="center"
        android:textColor="@color/colorYellow"/>


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/btn_grey"
        android:text="@string/Continue"/>

    <Button
        android:id="@+id/btn_newGame"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/btn_yellow_effect"
        android:text="@string/new_game"
        />

</LinearLayout>
