<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ufrpe.bccsurvivor.jogo.RankingActivity"
    android:orientation="vertical"
    android:background="@color/colorGame">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGame"
        android:gravity="center"
        android:text="@string/tv_Ranking"
        android:textColor="@color/colorYellow"
        android:textAppearance="@android:style/TextAppearance.WindowTitle"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorGame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:text="@string/tv_Jogador"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textColor="@color/questaoBanco"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="end"
            android:text="@string/tv_Pontos"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textColor="@color/questaoBanco"
            android:textSize="24sp" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragmentRank"
        android:name="com.ufrpe.bccsurvivor.jogo.RankingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>
