<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGame"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="com.ufrpe.bccsurvivor.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="MENU"
        android:id="@+id/menuMain"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:text="@string/modo_jogo"
                android:background="@drawable/btn_yellow_effect"/>

            <Button
                android:id="@+id/botaoRanking"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:text="@string/ranking"
                android:background="@drawable/btn_red_effect"/>

            <Button
                android:id="@+id/botaoQuestoes"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/banco_de_quest_es"
                android:background="@drawable/btn_blue_effect"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
