<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ufrpe.bccsurvivor.jogo.GameActivity">

    <TextView
        android:id="@+id/disciplinajogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:visibility="visible"
        android:background="@color/colorYellow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorGame">

        <TextView
            android:id="@+id/pulos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/tv_estrelas"
            android:textColor="@color/colorYellow"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/star"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/vidas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/tv_vida"
            android:textColor="@color/questaoBanco"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/heart"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txscore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/tv_score"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="0"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp"
            android:visibility="visible" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@color/colorGame">

        <TextView
            android:id="@+id/questao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/grandient"
            android:gravity="center"
            android:text="@string/tv_Perguntas"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorGame">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/alternativaA"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/btn_red_effect"
                    android:text="@string/bt_repostaA"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/alternativaAresult"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/wrong"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/alternativaB"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/btn_green_effect"
                    android:text="@string/bt_repostaB"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/alternativaBresult"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/wrong"
                    android:visibility="invisible"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/alternativaC"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_orange_effect"
                android:text="@string/bt_repostaC"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/alternativaCresult"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/wrong"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/alternativaD"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_blue_effect"
                android:text="@string/bt_repostaD"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/alternativaDresult"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/wrong"
                android:visibility="invisible"/>

        </LinearLayout>

            <Button
                android:id="@+id/btnPular"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/btn_yellow_effect"
                android:text="@string/pular" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
